examples/test/testpolicy1764.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1764
  namespace: namespace69
spec:
  podSelector:
    matchLabels:
      key33: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value37
      podSelector:
        matchLabels:
          key18: value40
          key25: value35
          key10: value17
